macro(add_example arg1)
  configure_file(${arg1}.cpp.in ${arg1}.cpp @ONLY)
  add_executable(${arg1} ${CMAKE_CURRENT_BINARY_DIR}/${arg1}.cpp)
  target_link_libraries(${arg1} Coin::Coin SoQt::SoQt)
endmacro(add_example)

add_example(02.1.HelloCone)
add_example(02.2.EngineSpin)
add_example(02.3.Trackball)
add_example(02.4.Examiner)
add_example(03.1.Molecule)
add_example(03.2.Robot)
add_example(03.3.Naming)
add_example(04.1.Cameras)
add_example(04.2.Lights)
add_example(05.1.FaceSet)
add_example(05.2.IndexedFaceSet)
add_example(05.3.TriangleStripSet)
add_example(05.4.QuadMesh)
add_example(05.5.Binding)
add_example(05.6.TransformOrdering)
add_example(06.1.Text)
add_example(06.2.Simple3DText)
add_example(06.3.Complex3DText)
add_example(07.1.BasicTexture)
add_example(07.2.TextureCoordinates)
add_example(07.3.TextureFunction)
add_example(08.1.BSCurve)
add_example(08.2.UniCurve)
add_example(08.3.BezSurf)
add_example(08.4.TrimSurf)
add_example(09.1.Print)
add_example(09.2.Texture)
add_example(09.3.Search)
add_example(09.4.PickAction)
add_example(09.5.GenSph)
add_example(10.1.addEventCB)
# add_example(10.2.setEventCB)
# add_example(10.3and4.MotifList)
add_example(10.5.SelectionCB)
add_example(10.6.PickFilterTopLevel)
add_example(10.7.PickFilterManip)
# add_example(10.8.PickFilterNodeKit)
add_example(11.1.ReadFile)
add_example(11.2.ReadString)
add_example(12.1.FieldSensor)
add_example(12.2.NodeSensor)
add_example(12.3.AlarmSensor)
add_example(12.4.TimerSensor)
add_example(13.1.GlobalFlds)
add_example(13.2.ElapsedTime)
add_example(13.3.TimeCounter)
add_example(13.4.Gate)
add_example(13.5.Boolean)
add_example(13.6.Calculator)
add_example(13.7.Rotor)
add_example(13.8.Blinker)
add_example(14.1.FrolickingWords)
# add_example(14.2.Editors)
add_example(14.3.Balance)
add_example(15.1.ConeRadius)
add_example(15.2.SliderBox)
add_example(15.3.AttachManip)
add_example(15.4.Customize)
# add_example(16.1.Overlay)
# add_example(16.2.Callback)
# add_example(16.3.AttachEditor)
# add_example(16.4.OneWindow)
add_example(16.5.Examiner)
# add_example(17.1.ColorIndex)
add_example(17.2.GLCallback)
# add_example(17.3.GLFloor)
