############################################################################

BUILT_SOURCES = \
	02.1.HelloCone.cpp \
	02.2.EngineSpin.cpp \
	02.3.Trackball.cpp \
	02.4.Examiner.cpp \
	03.1.Molecule.cpp \
	03.2.Robot.cpp \
	03.3.Naming.cpp \
	04.1.Cameras.cpp \
	04.2.Lights.cpp \
	05.1.FaceSet.cpp \
	05.2.IndexedFaceSet.cpp \
	05.3.TriangleStripSet.cpp \
	05.4.QuadMesh.cpp \
	05.5.Binding.cpp \
	05.6.TransformOrdering.cpp \
	06.1.Text.cpp \
	06.2.Simple3DText.cpp \
	06.3.Complex3DText.cpp \
	07.1.BasicTexture.cpp \
	07.2.TextureCoordinates.cpp \
	07.3.TextureFunction.cpp \
	08.1.BSCurve.cpp \
	08.2.UniCurve.cpp \
	08.3.BezSurf.cpp \
	08.4.TrimSurf.cpp \
	09.1.Print.cpp \
	09.2.Texture.cpp \
	09.3.Search.cpp \
	09.4.PickAction.cpp \
	09.5.GenSph.cpp \
	10.1.addEventCB.cpp \
	10.2.setEventCB.cpp \
	10.3and4.MotifList.cpp \
	10.5.SelectionCB.cpp \
	10.6.PickFilterTopLevel.cpp \
	10.7.PickFilterManip.cpp \
	10.8.PickFilterNodeKit.cpp \
	11.1.ReadFile.cpp \
	11.2.ReadString.cpp \
	12.1.FieldSensor.cpp \
	12.2.NodeSensor.cpp \
	12.3.AlarmSensor.cpp \
	12.4.TimerSensor.cpp \
	13.1.GlobalFlds.cpp \
	13.2.ElapsedTime.cpp \
	13.3.TimeCounter.cpp \
	13.4.Gate.cpp \
	13.5.Boolean.cpp \
	13.6.Calculator.cpp \
	13.7.Rotor.cpp \
	13.8.Blinker.cpp \
	14.1.FrolickingWords.cpp \
	14.2.Editors.cpp \
	14.3.Balance.cpp \
	15.1.ConeRadius.cpp \
	15.2.SliderBox.cpp \
	15.3.AttachManip.cpp \
	15.4.Customize.cpp \
	16.1.Overlay.cpp \
	16.2.Callback.cpp \
	16.3.AttachEditor.cpp \
	16.4.OneWindow.cpp \
	16.5.Examiner.cpp \
	17.1.ColorIndex.cpp \
	17.2.GLCallback.cpp \
	17.3.GLFloor.cpp

if BUILD_XT_ONLY_EXAMPLES
XT_ONLY_PROGS = \
        10.2.setEventCB \
        10.5.SelectionCB \
        10.6.PickFilterTopLevel \
        16.1.Overlay \
        17.1.ColorIndex
else
XT_ONLY_PROGS = 
endif


noinst_PROGRAMS = \
        $(XT_ONLY_PROGS) \
        02.1.HelloCone \
        02.2.EngineSpin \
        02.3.Trackball \
        02.4.Examiner \
        03.1.Molecule \
        03.2.Robot \
        03.3.Naming \
        04.1.Cameras \
        04.2.Lights \
        05.1.FaceSet \
        05.2.IndexedFaceSet \
        05.3.TriangleStripSet \
        05.4.QuadMesh \
        05.5.Binding \
        05.6.TransformOrdering \
        06.1.Text \
        06.2.Simple3DText \
        06.3.Complex3DText \
        07.1.BasicTexture \
        07.2.TextureCoordinates \
        07.3.TextureFunction \
        08.1.BSCurve \
        08.2.UniCurve \
        08.3.BezSurf \
        08.4.TrimSurf \
        09.1.Print \
        09.2.Texture \
        09.3.Search \
        09.4.PickAction \
        09.5.GenSph \
        10.1.addEventCB \
        10.7.PickFilterManip \
        11.1.ReadFile \
        11.2.ReadString \
        12.1.FieldSensor \
        12.2.NodeSensor \
        12.3.AlarmSensor \
        12.4.TimerSensor \
        13.1.GlobalFlds \
        13.2.ElapsedTime \
        13.3.TimeCounter \
        13.4.Gate \
        13.5.Boolean \
        13.6.Calculator \
        13.7.Rotor \
        13.8.Blinker \
        14.1.FrolickingWords \
        14.3.Balance \
        15.1.ConeRadius \
        15.2.SliderBox \
        15.3.AttachManip \
        15.4.Customize \
        16.5.Examiner \
        17.2.GLCallback \
        17.3.GLFloor

# Not yet in use (note: these are also matched by uncommenting below):

# (doesn't link with -lInventorXt (weird))
# 10.3and4.MotifList
#
# (missing SoXtMaterialEditor)
# 10.8.PickFilterNodeKit
# 16.2.Callback
# 16.3.AttachEditor
# 16.4.OneWindow
#
# (missing SoXtDirectionalLightEditor and SoXtMaterialEditor)
# 14.2.Editors

02_1_HelloCone_SOURCES = 02.1.HelloCone.cpp
02_2_EngineSpin_SOURCES = 02.2.EngineSpin.cpp
02_3_Trackball_SOURCES = 02.3.Trackball.cpp
02_4_Examiner_SOURCES = 02.4.Examiner.cpp
03_1_Molecule_SOURCES = 03.1.Molecule.cpp
03_2_Robot_SOURCES = 03.2.Robot.cpp
03_3_Naming_SOURCES = 03.3.Naming.cpp
04_1_Cameras_SOURCES = 04.1.Cameras.cpp
04_2_Lights_SOURCES = 04.2.Lights.cpp
05_1_FaceSet_SOURCES = 05.1.FaceSet.cpp
05_2_IndexedFaceSet_SOURCES = 05.2.IndexedFaceSet.cpp
05_3_TriangleStripSet_SOURCES = 05.3.TriangleStripSet.cpp
05_4_QuadMesh_SOURCES = 05.4.QuadMesh.cpp
05_5_Binding_SOURCES = 05.5.Binding.cpp
05_6_TransformOrdering_SOURCES = 05.6.TransformOrdering.cpp
06_1_Text_SOURCES = 06.1.Text.cpp
06_2_Simple3DText_SOURCES = 06.2.Simple3DText.cpp
06_3_Complex3DText_SOURCES = 06.3.Complex3DText.cpp
07_1_BasicTexture_SOURCES = 07.1.BasicTexture.cpp
07_2_TextureCoordinates_SOURCES = 07.2.TextureCoordinates.cpp
07_3_TextureFunction_SOURCES = 07.3.TextureFunction.cpp
08_1_BSCurve_SOURCES = 08.1.BSCurve.cpp
08_2_UniCurve_SOURCES = 08.2.UniCurve.cpp
08_3_BezSurf_SOURCES = 08.3.BezSurf.cpp
08_4_TrimSurf_SOURCES = 08.4.TrimSurf.cpp
09_1_Print_SOURCES = 09.1.Print.cpp
09_2_Texture_SOURCES = 09.2.Texture.cpp
09_3_Search_SOURCES = 09.3.Search.cpp
09_4_PickAction_SOURCES = 09.4.PickAction.cpp
09_5_GenSph_SOURCES = 09.5.GenSph.cpp
10_1_addEventCB_SOURCES = 10.1.addEventCB.cpp
#10_3and4_MotifList_SOURCES = 10.3and4.MotifList.cpp
10_7_PickFilterManip_SOURCES = 10.7.PickFilterManip.cpp
#10_8_PickFilterNodeKit_SOURCES = 10.8.PickFilterNodeKit.cpp
11_1_ReadFile_SOURCES = 11.1.ReadFile.cpp
11_2_ReadString_SOURCES = 11.2.ReadString.cpp
12_1_FieldSensor_SOURCES = 12.1.FieldSensor.cpp
12_2_NodeSensor_SOURCES = 12.2.NodeSensor.cpp
12_3_AlarmSensor_SOURCES = 12.3.AlarmSensor.cpp
12_4_TimerSensor_SOURCES = 12.4.TimerSensor.cpp
13_1_GlobalFlds_SOURCES = 13.1.GlobalFlds.cpp
13_2_ElapsedTime_SOURCES = 13.2.ElapsedTime.cpp
13_3_TimeCounter_SOURCES = 13.3.TimeCounter.cpp
13_4_Gate_SOURCES = 13.4.Gate.cpp
13_5_Boolean_SOURCES = 13.5.Boolean.cpp
13_6_Calculator_SOURCES = 13.6.Calculator.cpp
13_7_Rotor_SOURCES = 13.7.Rotor.cpp
13_8_Blinker_SOURCES = 13.8.Blinker.cpp
14_1_FrolickingWords_SOURCES = 14.1.FrolickingWords.cpp
#14_2_Editors_SOURCES = 14.2.Editors.cpp
14_3_Balance_SOURCES = 14.3.Balance.cpp
15_1_ConeRadius_SOURCES = 15.1.ConeRadius.cpp
15_2_SliderBox_SOURCES = 15.2.SliderBox.cpp
15_3_AttachManip_SOURCES = 15.3.AttachManip.cpp
15_4_Customize_SOURCES = 15.4.Customize.cpp
#16_2_Callback_SOURCES = 16.2.Callback.cpp
#16_3_AttachEditor_SOURCES = 16.3.AttachEditor.cpp
#16_4_OneWindow_SOURCES = 16.4.OneWindow.cpp
16_5_Examiner_SOURCES = 16.5.Examiner.cpp
17_2_GLCallback_SOURCES = 17.2.GLCallback.cpp
17_3_GLFloor_SOURCES = 17.3.GLFloor.cpp

if BUILD_XT_ONLY_EXAMPLES
10_2_setEventCB_SOURCES = 10.2.setEventCB.cpp
10_5_SelectionCB_SOURCES = 10.5.SelectionCB.cpp
10_6_PickFilterTopLevel_SOURCES = 10.6.PickFilterTopLevel.cpp
16_1_Overlay_SOURCES = 16.1.Overlay.cpp
17_1_ColorIndex_SOURCES = 17.1.ColorIndex.cpp
endif


############################################################################
