############################################################################

BUILT_SOURCES = newNodes.cpp

noinst_PROGRAMS = newNodes

newNodes_SOURCES = \
        Alternate.cpp Alternate.h \
        Glow.cpp Glow.h \
        Pyramid.cpp Pyramid.h \
        newNodes.cpp


############################################################################
