set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_executable(05.Elements main.cpp TemperatureElement.cpp)
set_target_properties(05.Elements PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(05.Elements So${Gui}::So${Gui})
install(TARGETS 05.Elements RUNTIME DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/ivexamples_${Gui}/Toolmaker)
